main.css
nav li {
  display: inline-block;
  font-size: 13px;
  font-family: sans-serif;
  padding: 10px 15px;
}

a {
  color: #666;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

header {
  position: absolute;
  width: 100%;
  top: 0px;
}

main {
  padding-top: 250px;
  padding-bottom: 250px;
  width: 100%;
  text-align: center;
}

input[type=text] {
  margin: 20px 0px;
}

input[type=button] {
  border: none;
  color: #666;
  background-color: lightgrey;
  padding: 10px 15px;
  font-size: 10px;
  font-weight: bold;
}

input[type=button]:hover {
  border: 1px solid lightgrey;
  color: #444;
  background-color: #eee;
  border
}

footer {
  background-color: lightgrey;
  border-top-width: 1px;
  border-top-style: solid;
  border-top-color: darkgrey;
  position: absolute;
  width: 100%;
  bottom: 0px;
}

.float_right {
  float: right;
}
.float_left {
  float: left;
}

